Fri Sep 05 17:41:53 GMT 2014  Olly Betts <olly@survex.com>

	* tests/harness/fdtracker.cc: Don't report apparent leaks of fds
	  opened on /dev/urandom - at least on Linux, something in the C
	  library seems to lazily open it, and the report of a possible leak
	  followed by assurance that it's OK really is just noise we could
	  do without.

Fri Sep 05 14:06:08 GMT 2014  Olly Betts <olly@survex.com>

	* common/pretty.h: Add new brass-related types.

Thu Sep 04 20:51:16 GMT 2014  Olly Betts <olly@survex.com>

	* backends/dbfactory.cc: Fix incorrect return type in logging
	  annotations for InMemory::open().

Thu Sep 04 20:48:37 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.cc,backends/chert/chert_database.cc:
	  Fix logging annotations for get_freqs() to reflect that it now has
	  void return type.

Thu Sep 04 20:21:32 GMT 2014  Olly Betts <olly@survex.com>

	* api/,backends/brass/,backends/chert/,backends/dbfactory_remote.cc,
	  matcher/mergepostlist.cc,matcher/remotesubmatch.cc,
	  net/progclient.cc: Add missing RETURN() markup for debug logging,
	  highlighted by warning from recent GCC.

Thu Sep 04 18:02:38 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_freelist.cc,backends/brass/brass_freelist.h:
	  Make the BrassTable parameter a const pointer.

Thu Sep 04 17:13:57 GMT 2014  Olly Betts <olly@survex.com>

	* common/io_utils.cc: Reading or writing a block will almost always
	  complete in one call, so streamline that case.

Wed Sep 03 19:30:00 GMT 2014  Olly Betts <olly@survex.com>

	* common/internaltypes.h: Update comment to reflect C++11 now being
	  out.

Wed Sep 03 19:29:09 GMT 2014  Olly Betts <olly@survex.com>

	* common/internaltypes.h,configure.ac: Make uint2 available.

Wed Sep 03 19:27:41 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_database.h: Remove method which is declared but
	  never defined.

Wed Sep 03 18:52:40 GMT 2014  Olly Betts <olly@survex.com>
