@@ -1,3 +1,9 @@
+Wed Sep 10 16:59:20 GMT 2014  Olly Betts <olly@survex.com>
+
+	* tests/queryparsertest.cc: Enable some disabled cases which actually
+	  work (in some cases with slightly tweaked expected answers which are
+	  equivalent to those that were shown).
+
 Fri Sep 05 17:41:53 GMT 2014  Olly Betts <olly@survex.com>
 
 	* tests/harness/fdtracker.cc: Don't report apparent leaks of fds
